# simple-asr

./: README.md  setup.cfg
easy_asr/: __init__.py
simple_asr/: __init__.py
