[metadata]
name = easy-asr
version = 0.0.1
description = Wrapper module around wav2vec2 designed for ease of use
long_description = file: README.md
long_description_content_type = text/markdown
keywords = asr, wav2vec2
license = MIT
license_files = LICENSE
author = Daniel Swanson
author_email = asr@dangswan.com
home_page = http://github.com/mr-martian/easy-asr

[options]
packages = find:
install_requires =
  datasets
  evaluate
  jiwer
  torchaudio
  transformers[torch]~=4.35

  pyAudioAnalysis==0.3.14
  # required by pyAudioAnalysis (which doesn't install it's deps correctly)
  eyeD3>=0.9.6
  hmmlearn>=0.2.5
  imblearn
  plotly>=5.3.1

[options.entry_points]
console_scripts =
  easy-asr-elan = easy_asr:cli_elan
  easy-asr-cv = easy_asr:cli_cv
  easy-asr-split = easy_asr:cli_split
  easy-asr-train = easy_asr:cli_train
  easy-asr-evaluate = easy_asr:cli_eval
  easy-asr-predict = easy_asr:cli_predict
  easy-asr-blank-elan = easy_asr.blank:cli
